# pollyweb-pypi-domain

./: .gitignore  INTERFACES_CONFLICT_ANALYSIS.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.githooks/: pre-push
behaviours/api/: SYNCAPI.py  SYNCAPI_RECEIVER.py  SYNCAPI_TESTS.py
behaviours/crud/: CRUD.py  CRUD_ANSWERS.py  CRUD_ENTITIES.py  CRUD_ENTITY.py  CRUD_ENTITY_ABOUT.py  CRUD_ENTITY_EXPORT.py  CRUD_ENTITY_PROPERTY.py  CRUD_ENTITY_PROPERTY_INTERNAL.py  CRUD_MODEL_GROUP.py  CRUD_WALLET.py  CRUD_WALLET_ITEMS.py  CRUD_WALLET_SESSIONS.py
behaviours/host/: HOST_API_PROMPT.py  HOST_ASSET.py  HOST_FILE.py  HOST_FILES.py  HOST_LOCATOR.py  HOST_MOCKS.py  HOST_SESSIONS.py  HOST_TESTS.py
behaviours/manifester/: MANIFESTER.py
behaviours/messenger/: MESSENGER.py  MESSENGER_CALLBACK.py  MESSENGER_TESTS.py
behaviours/publisher/: PUBLISHER.py  PUBLISHER_CORRELATION.py  PUBLISHER_MOCKS.py  PUBLISHER_TESTS.py  PUBLISHER_UPDATE.py
behaviours/subscriber/: SUBSCRIBER_DEDUP.py  SUBSCRIBER_TESTS.py
behaviours/talker/: TALK.py  TALKER.py  TALKER_BASE.py  TALKER_EVALUATE_BASE.py  TALKER_MOCKS.py  TALK_BASE.py  TALK_EXEC.py  TALK_INDEX.py  TALK_PARSE.py  TALK_TESTS.py
behaviours/transfer/: TRANSFER.py  TRANSFER_MOCKS.py
scripts/: check-security.sh  install-git-hooks.sh  publish.sh
src/PW_DOMAIN/: CODE.py  DOMAIN_CONFIG.py  DOMAIN_PARSER.py  MANIFEST.py  MANIFEST_TRUST.py  MSG.py  __init__.py  _utils.py
src/pollyweb_domain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_domain_parser.py  test_manifest.py  test_msg.py
(+146 files in other folders)
